# Fortune-Bald

./: .gitignore  .gitlab-ci.yml  JenkinsFile  Jenkinsfile  README.md  pyproject.toml
cassino_cli/: __main__.py
cassino_cli/games/: blackjack.py  slots.py
cassino_cli/games/testes.py/: tests.py
cassino_cli/utils/: deck.py
tests/: test_blackjack.py  test_slots.py
